# throughput-opt-systolic-arrays

./: AUTHORS  COPYING  Makefile  Makefile.am  Makefile.in  README.md  config.status  configure  configure.ac  reconf
doc/: Makefile  Makefile.am  Makefile.in
include/NTL/: config.h
include/omega/basic/: bool.h
include/omega/code_gen/: code_gen.h
include/omega/omega/: reach.h
include/polylib/: polylib.h
input-polyhedrons/bmm/: bmm-8,1,8,1.dom  bmm-8,1,8,1.ver  bmm.dep  bmm.dom  bmm.opt  bmm.ver
input-polyhedrons/bmv/: bmv.dep  bmv.dom  bmv.opt  bmv.ver
input-polyhedrons/bsw/: bsw-MN.dom  bsw.dep  bsw.dom  bsw.opt  bsw.ver
input-polyhedrons/nussinov/: nussinov-N101.ver  nussinov.dep  nussinov.dom  nussinov.opt  nussinov.ver
input-polyhedrons/sort/: sort.dep  sort.dom  sort.opt  sort.ver
input-polyhedrons/sw/: sw.dep  sw.dom  sw.opt  sw.ver
m4/: Makefile  Makefile.am  Makefile.in
src/: Makefile  Makefile.am  Makefile.in  commandline-options.hpp  enumerate-projections.cpp  index-enumerator.hpp  polyhedron-options.hpp  projection-solution.hpp  projection-solver.hpp  schedule-ilp.hpp  solutions.hpp  throughput-ilp.hpp
